2014-09-03 Andrew Burgess <andrew.burgess@embecosm.com>
	When editing an item from the `kill-ring', if the preview is
	turned on, then update the preview live while the edit is being
	made.

2014-09-03 Andrew Burgess <andrew.burgess@embecosm.com>
	Split `browse-kill-ring-preview-update' into two functions so the
	new worker code, `browse-kill-ring-preview-update-text' can be
	reused in the next commit.  No user visible change from this.

2014-09-03 Andrew Burgess <andrew.burgess@embecosm.com>
	When deleting the last item in the *Kill Ring* buffer, also delete
	the preceding separator.

2014-09-01 Andrew Burgess <andrew.burgess@embecosm.com>
	After editing entries from the `*Kill Ring*' reselect the item in
	the `*Kill Ring*' buffer.

2014-09-01 Andrew Burgess <andrew.burgess@embecosm.com>
	Factor out code from `browse-kill-ring' to find a matching entry
	in the `kill-ring' creating `browse-kill-ring-find-entry', this
	will be used in a later commit.  Should be no user visible changes
	from this commit.

2014-09-01 Andrew Burgess <andrew.burgess@embecosm.com>
	When editing entries in the `kill-ring' place a header line in the
	edit buffer with a short key guide.  Kill the edit buffer when
	editing is finished rather than just burying it.  Add an abort key
	mapping to allow the edit buffer to be closed without saving the
	changes.

2014-09-01 Andrew Burgess <andrew.burgess@embecosm.com>
	Adjust mechanism used to restore buffer and window before
	inserting items from the `kill-ring', this should resolve issues
	when there are multiple frames or windows open onto the same
	buffer with different values for point.

2014-08-29 Andrew Burgess <andrew.burgess@embecosm.com>
	Remove `browse-kill-ring-highlight-inserted-item-style' and
	instead allow `browse-kill-ring-highlight-inserted-item' to take
	the value `pulse' or `solid' as well as `nil' and `t'.  It's type
	is changed to `choice' accordingly.  The value `t' now means use